--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
         <form action="https://formsubmit.co/7d2122ffe041de00d334fc7899fa8323" method="POST">
             <h3>GET IN TOUCH</h3>
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="Email Address" required>
-            <input type="text" id="phone" placeholder="Phone Number" required>
-            <textarea id="message" rows="4" placeholder="How can we help you?"></textarea>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <input type="email" id="email" name="email" placeholder="Email Address" required>
+            <input type="text" id="phone" name="phone"placeholder="Phone Number" required>
+            <textarea id="message" name="comments, questions" rows="4" placeholder="How can we help you?" required></textarea>
             <button type="submit">Send</button>
         </form>
     </div>
