--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <form action="https://formsubmit.co/floresail.info@gmail.com" method="POST">
            
             <!--Honeypot-->
-            <input type="text" name="_honey" style="display:none;">
+            <input type="text" name="_honey" style="display: none;">
 
             <!--Disable Captcha-->
             <input type="hidden" name="_captcha" value="false">
+
+            <input type="hidden" name="_next" value="https://2salted.github.io/Contactus.test/success.html">
 
             <h3>GET IN TOUCH</h3>
             <input type="text" id="name" name="name" placeholder="Your Name" required>
