--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <body>
     <h1>Date Picker Example</h1>
     <form action="https://formsubmit.co/floresail.info@gmail.com" method="POST">
+
+           <!--Honeypot-->
+           <input type="text" name="_honey" style="display: none;">
+
+           <!--Disable Captcha-->
+           <input type="hidden" name="_captcha" value="false">
+
+           <input type="hidden" name="_next" value="https://2salted.github.io/Contactus.test/index.html">
+           
     <div class="date-picker-container">
       <input type="text" name="Date" id="date" placeholder="Select a date" required>
       <div class="date-picker">
